# parse_summoner_on_discord

./: .gitignore  Cargo.toml  README.md
data/: champion.json  champion_id.json
parse_summoner/: Cargo.toml
parse_summoner/src/: main.rs
src/: lib.rs  libs.rs  logic.rs  main.rs  models.rs
src/errors/: api_error.rs
src/libs/: discord_handler.rs  get_champ_id_map.rs  mod.rs
src/logic/: calc_mastery.rs  calc_rank.rs  mod.rs  riot_token.rs
src/models/: account_v1.rs  champion_mastery_v4.rs  league_v4.rs  mod.rs  riot_api_trait.rs  riot_token.rs  summoner_v4.rs  v4_trait.rs  v4_traits.rs
