[package]
name = "parse_summoner_on_discord"
version = "0.1.0"
authors = ["Cowsisland"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
url = "1.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.8.1"
